Add HTML report output to gcov.

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -16,4 +16,6 @@ jobs:
 
       - name: Check Test Coverage
         uses: threeal/gcovr-action@v1.1.0
-        
+        with:
+          html-out: coverage.html
+          html-details: true
