Test exculude in the gcovr-action.

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -20,3 +20,4 @@ jobs:
           html-out: coverage.html
           html-details: true
           coveralls-send: true
+          excludes: build/*
