Test to exclude mutiple source with regex.
For gcovr-action.

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -20,4 +20,4 @@ jobs:
           html-out: coverage.html
           html-details: true
           coveralls-send: true
-          excludes: build/*
+          excludes: [build/*, test/*, src/*/*.hpp]
