--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -17,7 +17,5 @@ jobs:
       - name: Check Test Coverage
         uses: threeal/gcovr-action@v1.1.0
         with:
-          html-out: coverage.html
-          html-details: true
           coveralls-send: true
-          excludes:  build/* test/* src/*/*.hpp
+          excludes:  build/* test/* 
