--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -18,4 +18,4 @@ jobs:
         uses: threeal/gcovr-action@v1.1.0
         with:
           coveralls-send: true
-          excludes:  build/* test/* 
+          excludes:  build/* test/* *.hpp
